//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user User [not null]
}

Table User {
  id String [pk]
  name String
  email String [unique]
  emailVerified DateTime
  image String
  accounts Account [not null]
  sessions Session [not null]
  adminOf Organization [not null]
  programs ProgramContact [not null]
  organizations OrganizationContact [not null]
  roles OrganizationRole [not null]
  admin Boolean [not null, default: false]
  lists FavoritesList [not null]
  createdLists FavoritesList [not null]
  currentListId Int
}

Table VerificationToken {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table Category {
  category String [pk]
  description String
  organizations Organization [not null]
  programs Program [not null]
  tags Tag [not null]
}

Table Tag {
  tag String [pk]
  description String
  organizations Organization [not null]
  programs Program [not null]
  categories Category [not null]
}

Table Community {
  name String [pk]
  id String [unique, not null]
  slug String [unique, not null]
  description String
  exclusiveOrgs Organization [not null]
  exclusivePrograms Program [not null]
  helpfulOrgs Organization [not null]
  helpfulPrograms Program [not null]
  parentCommunities Community [not null]
  subCommunities Community [not null]
}

Table Organization {
  id String [pk]
  name String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  admins User [not null]
  description String [not null]
  category String [not null]
  categoryMeta Category [not null]
  tags Tag [not null]
  website String
  logo String
  phone String
  email String
  adminOf Organization [not null]
  administeringOrg Organization [not null]
  programs Program [not null]
  assistsWith Program [not null]
  exclusiveToCommunities Community [not null]
  helpfulToCommunities Community [not null]
  roles OrganizationRole [not null]
  contacts OrganizationContact [not null]
  lists FavoritesList [not null]
}

Table OrganizationRole {
  userId String [not null]
  orgId String [not null]
  user User [not null]
  organization Organization [not null]

  indexes {
    (userId, orgId) [pk]
  }
}

Table Program {
  id String [pk]
  name String [not null]
  description String [not null]
  url String
  organizationId String [not null]
  organization Organization [not null]
  helpingOrganizations Organization [not null]
  category String [not null]
  categoryMeta Category [not null]
  tags Tag [not null]
  exclusiveToCommunities Community [not null]
  helpfulToCommunities Community [not null]
  contacts ProgramContact [not null]
  barriersToEntry BarriersToEntry
  barriersToEntryDetails String
  speedOfAid SpeedOfAid[] [not null]
  speedOfAidDetails String
  lists FavoritesList [not null]
  free Boolean [not null, default: false]
}

Table ProgramContact {
  userId String [not null]
  programId String [not null]
  user User [not null]
  program Program [not null]
  phone String
  email String

  indexes {
    (userId, programId) [pk]
  }
}

Table OrganizationContact {
  userId String [not null]
  orgId String [not null]
  user User [not null]
  organization Organization [not null]
  phone String
  email String

  indexes {
    (userId, orgId) [pk]
  }
}

Table FavoritesList {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  adminId String [not null]
  admin User [not null]
  authorizedUsers User [not null]
  name String [not null, default: 'Favorites']
  notes String
  programs Program [not null]
  organizations Organization [not null]
  public Boolean [not null, default: true]
}

Enum BarriersToEntry {
  MINIMAL
  LOW
  MEDIUM
  HIGH
}

Enum SpeedOfAid {
  IMMEDIATE
  DAYS
  WEEKS
  MONTHS
  YEARS
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]

Ref: Organization.category > Category.category

Ref: OrganizationRole.userId > User.id [delete: Cascade]

Ref: OrganizationRole.orgId > Organization.id [delete: Cascade]

Ref: Program.organizationId > Organization.id [delete: Cascade]

Ref: Program.category > Category.category

Ref: ProgramContact.userId > User.id [delete: Cascade]

Ref: ProgramContact.programId > Program.id [delete: Cascade]

Ref: OrganizationContact.userId > User.id [delete: Cascade]

Ref: OrganizationContact.orgId > Organization.id [delete: Cascade]

Ref: FavoritesList.adminId > User.id [delete: Cascade]